Set correct width of main content on smaller screens

--- a/koddsson.com/index.css
+++ b/koddsson.com/index.css
@@ -131,6 +131,10 @@ a {
 }
 
 @media (max-width: 568px) {
+  section.main {
+    width: 100%;
+  }
+
   .post.small > .body > .image > img {
     width: 100px;
   }
